2007-03-01  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* parser/Makefile.am, parser/copyfuncs.c: Porting deep copy
	  functions for tree nodes from PostgreSQL.

2007-02-28  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Makefile.am: Use libtool's -rpath option instead of ld's rpath
	  option. Because rpath option name is platform-dependent.

2007-02-16  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Makefile.am, configure.in, pool_connection_pool.c,
	  pool_query_cache.c, pcp/pcp.c, pcp/pcp_stream.c: Fixed compile
	  error on MacOS X. MacOS's ld does not have rpath option. So add
	  --disable-rpath option to configure for MacOS X.

2007-02-13  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.0.2

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add release note.

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add Japanese release note into
	  pgpool-ja.html.

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_connection_pool.c: pgpool *only* checks
	  backend connection when connection pool is reused.

2007-02-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* NEWS: fix indent.

2007-02-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* NEWS: Remove '\000'.

2007-02-08  Tatsuo Ishii  <ishii@sraoss.co.jp>

	* doc/pgpool-en.html: prepare for 1.0.2

2007-02-08  Tatsuo Ishii  <ishii@sraoss.co.jp>

	* NEWS, config.h.in, configure: Prepare for 1.0.2

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add new loadbalancing rule in replication
	  mode section.

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_query_cache.c, configure.in, pool_system.c: Fixed configure
	  error if libpq version is 7.4.x. 7.4 does not have PQprepare().
	  So when version is 7.4, pgpool uses PREPARE statement instead of
	  PQprepare().

2007-02-08  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* configure.in: Prepare for 1.0.2

2007-02-07  Tatsuo Ishii  <ishii@sraoss.co.jp>
