@@ -1,5 +1,10 @@
 2007-03-01  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>
 
+	* pool_process_query.c: Support load balancing with extended
+	  protocol.
+
+2007-03-01  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>
+
 	* parser/Makefile.am, parser/copyfuncs.c: Porting deep copy
 	  functions for tree nodes from PostgreSQL.
 
